--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vaidosa Fitness - Tecidos</title>
+  <title>Vaidosa Fitness</title>
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <!-- Cabeçalho -->
-  <header class="bg-white text-center py-3">
+  <header class="bg-white py-3 px-4 d-flex justify-content-between align-items-center">
     <img src="img/logo.png" alt="Logo Vaidosa Fitness" height="60">
+    <a href="carrinho.html" class="btn btn-outline-dark">🛒 Ver carrinho</a>
   </header>
 
   <!-- Galeria de Produtos -->
