--- a/carrinho.html
+++ b/carrinho.html
@@ -4,13 +4,17 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Carrinho | Vaidosa Fitness</title>
+  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <!-- Cabeçalho -->
-  <header class="bg-white text-center py-3">
+  <header class="bg-white py-3 position-relative text-center">
     <img src="img/logo.png" alt="Logo Vaidosa Fitness" height="60">
+    <a href="carrinho.html" class="btn btn-outline-dark position-absolute end-0 top-50 translate-middle-y me-3">
+      🛒
+    </a>
   </header>
 
   <!-- Carrinho -->
@@ -73,51 +77,12 @@
   </main>
 
   <!-- Rodapé -->
-  <footer class="text-center py-4 bg-light mt-5">
+  <footer class="text-center py-4 bg-light">
     Desenvolvido por <a href="https://instagram.com/carlosbalbinot_" target="_blank">Carlos Balbinot</a>
   </footer>
 
   <!-- Scripts -->
-  <script>
-    // CPF/CNPJ switch
-    const tipoPessoa = document.getElementById('tipoPessoa');
-    const campoCpf = document.getElementById('campoCpf');
-    const campoCnpj = document.getElementById('campoCnpj');
-
-    tipoPessoa.addEventListener('change', () => {
-      campoCpf.classList.add('d-none');
-      campoCnpj.classList.add('d-none');
-      if (tipoPessoa.value === 'cpf') campoCpf.classList.remove('d-none');
-      if (tipoPessoa.value === 'cnpj') campoCnpj.classList.remove('d-none');
-    });
-
-    // Carregar itens do carrinho
-    const carrinho = JSON.parse(localStorage.getItem('carrinho')) || [];
-    const lista = document.getElementById('lista-carrinho');
-    const inputProdutos = document.getElementById('input-produtos');
-
-    if (carrinho.length === 0) {
-      lista.innerHTML = '<p class="text-center">Nenhum produto no carrinho.</p>';
-    } else {
-      let resumo = '';
-      carrinho.forEach((item, index) => {
-        const col = document.createElement('div');
-        col.className = 'col-md-4';
-        col.innerHTML = `
-          <div class="card h-100 rounded-4">
-            <img src="${item.imagem}" class="card-img-top" alt="${item.nome}" style="height:300px; object-fit:cover;">
-            <div class="card-body text-center">
-              <h5 class="card-title">${item.nome}</h5>
-              <p class="card-text small">${item.desc}</p>
-            </div>
-          </div>`;
-        lista.appendChild(col);
-
-        resumo += `${index + 1}. ${item.nome} - ${item.desc}\\n`;
-      });
-      inputProdutos.value = resumo;
-    }
-  </script>
+  <script src="js/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
