--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 </head>
 <body>
   <!-- Cabeçalho -->
-  <header class="bg-white py-3 px-4 d-flex justify-content-between align-items-center">
+  <header class="bg-white py-3 position-relative text-center">
     <img src="img/logo.png" alt="Logo Vaidosa Fitness" height="60">
-    <a href="carrinho.html" class="btn btn-outline-dark">🛒 Ver carrinho</a>
+    <a href="carrinho.html" class="btn btn-outline-dark position-absolute end-0 top-50 translate-middle-y me-3">
+      🛒
+    </a>
   </header>
 
   <!-- Galeria de Produtos -->
@@ -56,6 +58,8 @@
     Desenvolvido por <a href="https://instagram.com/carlosbalbinot_" target="_blank">Carlos Balbinot</a>
   </footer>
 
+  <!-- Scripts -->
+  <script src="js/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
