--- a/produto.html
+++ b/produto.html
@@ -1,26 +1,33 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Produto | Vaidosa Fitness</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="css/style.css" />
+  <script src="js/script.js"></script>
 </head>
 <body>
   <!-- Cabeçalho -->
-  <header class="bg-white text-center py-3">
+  <header class="bg-white py-3 position-relative text-center">
     <img src="img/logo.png" alt="Logo Vaidosa Fitness" height="60">
+    <a href="carrinho.html" class="btn btn-outline-dark position-absolute end-0 top-50 translate-middle-y me-3">
+      🛒
+    </a>
   </header>
 
   <!-- Conteúdo do Produto -->
   <main class="container text-center my-5">
-    <img src="img/jaguar.jpeg" id="produto-imagem" alt="Produto" class="img-fluid rounded-4 mb-3" style="max-width: 400px;">
-    <h2 id="produto-nome">Tecido Jaguar</h2>
-    <p id="produto-desc">Tecido com visual sofisticado e toque macio, ideal para roupas fitness de alta performance.</p>
+    <img src="" id="produto-imagem" alt="Produto" class="img-fluid rounded-4 mb-3" style="max-width: 400px;">
+    <h2 id="produto-nome"></h2>
+    <p id="produto-desc"></p>
 
-    <button class="btn btn-outline-dark me-2" onclick="adicionarAoCarrinho()">Adicionar ao carrinho</button>
-    <button class="btn btn-dark mt-3" data-bs-toggle="modal" data-bs-target="#modalOrcamento">Solicitar orçamento</button>
+    <div class="d-flex justify-content-center gap-2 mt-4">
+      <button class="btn btn-outline-dark" id="btn-add-carrinho">Adicionar ao carrinho</button>
+      <button class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#modalOrcamento">Solicitar orçamento</button>
+    </div>
   </main>
 
   <!-- Modal Formulário -->
@@ -81,32 +88,7 @@
   </footer>
 
   <!-- Scripts -->
-  <script>
-    const tipoPessoa = document.getElementById('tipoPessoa');
-    const campoCpf = document.getElementById('campoCpf');
-    const campoCnpj = document.getElementById('campoCnpj');
-
-    tipoPessoa.addEventListener('change', () => {
-      campoCpf.classList.add('d-none');
-      campoCnpj.classList.add('d-none');
-      if (tipoPessoa.value === 'cpf') campoCpf.classList.remove('d-none');
-      if (tipoPessoa.value === 'cnpj') campoCnpj.classList.remove('d-none');
-    });
-
-    function adicionarAoCarrinho() {
-      const nome = document.getElementById("produto-nome").innerText;
-      const imagem = document.getElementById("produto-imagem").getAttribute("src");
-      const desc = document.getElementById("produto-desc").innerText;
-
-      const produto = { nome, imagem, desc };
-
-      let carrinho = JSON.parse(localStorage.getItem("carrinho")) || [];
-      carrinho.push(produto);
-      localStorage.setItem("carrinho", JSON.stringify(carrinho));
-
-      alert("Produto adicionado ao carrinho!");
-    }
-  </script>
+  <script src="js/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
