--- a/carrinho.html
+++ b/carrinho.html
@@ -13,7 +13,7 @@
   <header class="bg-white py-3 position-relative text-center">
     <img src="img/logo.png" alt="Logo Vaidosa Fitness" height="60">
     <a href="carrinho.html" class="btn btn-outline-dark position-absolute end-0 top-50 translate-middle-y me-3">
-      🛒
+    🛒 <span id="contador-carrinho">(0)</span>
     </a>
   </header>
 
