--- a/carrinho.html
+++ b/carrinho.html
@@ -10,10 +10,13 @@
 </head>
 <body>
   <!-- Cabeçalho -->
-  <header class="bg-white py-3 position-relative text-center">
-    <img src="img/logo.png" alt="Logo Vaidosa Fitness" height="60">
-    <a href="carrinho.html" class="btn btn-outline-dark position-absolute end-0 top-50 translate-middle-y me-3">
-    🛒 <span id="contador-carrinho">(0)</span>
+  <header class="py-3 position-relative text-center" style="background-color: #8d906c;">
+    <a href="javascript:history.back()" class="position-absolute start-0 top-50 translate-middle-y ms-3 text-dark fs-4 text-decoration-none">←</a>
+    <a href="index.html">
+      <img src="img/logo.png" alt="Logo Vaidosa Fitness" height="60">
+    </a>
+    <a href="carrinho.html" class="btn btn-outline-light position-absolute end-0 top-50 translate-middle-y me-3">
+      🛒 <span id="contador-carrinho">(0)</span>
     </a>
   </header>
 
