--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vaidosa Fitness</title>
-  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <!-- Cabeçalho -->
-  <header class="bg-white py-3 position-relative text-center">
-    <img src="img/logo.png" alt="Logo Vaidosa Fitness" height="60">
+  <header class="py-3 position-relative text-center bg-vaidosa">
+    <a href="index.html">
+      <img id="logo" src="img/logo.png" alt="Logo Vaidosa Fitness" height="60" />
+    </a>
     <a href="carrinho.html" class="btn btn-outline-dark position-absolute end-0 top-50 translate-middle-y me-3">
-    🛒 <span id="contador-carrinho">(0)</span>
+      🛒 <span id="contador-carrinho">(0)</span>
     </a>
   </header>
 
@@ -22,8 +24,8 @@
     <div class="row g-4">
       <div class="col-md-4">
         <a href="produto.html?produto=Jaguar" class="text-decoration-none text-dark">
-          <div class="card rounded-4 overflow-hidden">
-            <img src="img/jaguar.jpeg" class="card-img-top" alt="Tecido Jaguar">
+          <div class="card">
+            <img src="img/jaguar.jpeg" class="card-img-top" alt="Tecido Jaguar" />
             <div class="card-body text-center">
               <h5 class="card-title">Tecido Jaguar</h5>
             </div>
@@ -32,8 +34,8 @@
       </div>
       <div class="col-md-4">
         <a href="produto.html?produto=Suplex" class="text-decoration-none text-dark">
-          <div class="card rounded-4 overflow-hidden">
-            <img src="img/suplex.jpeg" class="card-img-top" alt="Tecido Suplex">
+          <div class="card">
+            <img src="img/suplex.jpeg" class="card-img-top" alt="Tecido Suplex" />
             <div class="card-body text-center">
               <h5 class="card-title">Tecido Suplex</h5>
             </div>
@@ -42,8 +44,8 @@
       </div>
       <div class="col-md-4">
         <a href="produto.html?produto=Maxxi" class="text-decoration-none text-dark">
-          <div class="card rounded-4 overflow-hidden">
-            <img src="img/maxxi.jpeg" class="card-img-top" alt="Tecido Maxxi">
+          <div class="card">
+            <img src="img/maxxi.jpeg" class="card-img-top" alt="Tecido Maxxi" />
             <div class="card-body text-center">
               <h5 class="card-title">Tecido Maxxi</h5>
             </div>
