--- a/produto.html
+++ b/produto.html
@@ -7,13 +7,21 @@
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="css/style.css" />
+  <style>
+    body {
+      background-color: #8d906c;
+    }
+  </style>
 </head>
 <body>
   <!-- Cabeçalho -->
   <header class="bg-white py-3 position-relative text-center">
-    <img src="img/logo.png" alt="Logo Vaidosa Fitness" height="60">
+    <a href="javascript:history.back()" class="position-absolute start-0 top-50 translate-middle-y ms-3 text-white fs-4 text-decoration-none">←</a>
+    <a href="index.html">
+      <img src="img/logo.png" alt="Logo Vaidosa Fitness" height="60">
+    </a>
     <a href="carrinho.html" class="btn btn-outline-dark position-absolute end-0 top-50 translate-middle-y me-3">
-    🛒 <span id="contador-carrinho">(0)</span>
+      🛒 <span id="contador-carrinho">(0)</span>
     </a>
   </header>
 
