--- a/produto.html
+++ b/produto.html
@@ -7,20 +7,15 @@
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="css/style.css" />
-  <style>
-    body {
-      background-color: #8d906c;
-    }
-  </style>
 </head>
 <body>
   <!-- Cabeçalho -->
-  <header class="bg-white py-3 position-relative text-center">
+  <header class="py-3 position-relative text-center" style="background-color: #8d906c;">
     <a href="javascript:history.back()" class="position-absolute start-0 top-50 translate-middle-y ms-3 text-white fs-4 text-decoration-none">←</a>
     <a href="index.html">
       <img src="img/logo.png" alt="Logo Vaidosa Fitness" height="60">
     </a>
-    <a href="carrinho.html" class="btn btn-outline-dark position-absolute end-0 top-50 translate-middle-y me-3">
+    <a href="carrinho.html" class="btn btn-outline-dark position-absolute end-0 top-50 translate-middle-y me-3 shadow">
       🛒 <span id="contador-carrinho">(0)</span>
     </a>
   </header>
@@ -28,7 +23,7 @@
   <!-- Conteúdo do Produto -->
   <main class="container text-center my-5">
     <img src="" id="produto-imagem" alt="Produto" class="img-fluid rounded-4 mb-3" style="max-width: 400px;">
-    <h2 id="produto-nome"></h2>
+    <h2 id="produto-nome" class="fw-bold"></h2>
     <p id="produto-desc"></p>
 
     <div class="d-flex justify-content-center gap-2 mt-4">
@@ -37,7 +32,7 @@
     </div>
   </main>
 
-  <!-- Modal Formulário -->
+  <!-- Modal -->
   <div class="modal fade" id="modalOrcamento" tabindex="-1">
     <div class="modal-dialog">
       <div class="modal-content">
