--- a/carrinho.html
+++ b/carrinho.html
@@ -80,7 +80,7 @@
   </main>
 
   <!-- Rodapé -->
-  <footer class="text-center py-4 bg-light">
+  <footer>
     Desenvolvido por <a href="https://instagram.com/carlosbalbinot_" target="_blank">Carlos Balbinot</a>
   </footer>
 
