--- a/produto.html
+++ b/produto.html
@@ -96,6 +96,11 @@
     </div>
   </div>
 
+  <!-- Rodapé -->
+  <footer>
+    Desenvolvido por <a href="https://instagram.com/carlosbalbinot_" target="_blank">Carlos Balbinot</a>
+  </footer>
+
   <!-- Scripts -->
   <script src="js/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
