--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
   <!-- Cabeçalho -->
-  <header class="py-3 position-relative text-center" style="background-color: #8d906c;">
+  <header class="py-3 position-relative text-center" style="background-color: #8d906c; padding-right: 70px;">
     <a href="index.html">
       <img src="img/logo.png" alt="Logo Vaidosa Fitness" height="60">
     </a>
-    <a href="carrinho.html" class="btn btn-outline-dark position-absolute end-0 top-50 translate-middle-y me-3 shadow">
+    <a href="carrinho.html" class="btn btn-outline-dark position-absolute end-0 top-50 translate-middle-y me-3 shadow" style="z-index: 10;">
       🛒 <span id="contador-carrinho">(0)</span>
     </a>
   </header>
@@ -22,7 +22,7 @@
   <!-- Galeria de Produtos -->
   <main class="container my-5">
     <div class="row g-4">
-      <div class="col-md-4">
+      <div class="col-6 col-md-4">
         <a href="produto.html?produto=Jaguar" class="text-decoration-none text-dark">
           <div class="card rounded-4 overflow-hidden">
             <img src="img/jaguar.jpeg" class="card-img-top" alt="Tecido Jaguar">
@@ -32,7 +32,7 @@
           </div>
         </a>
       </div>
-      <div class="col-md-4">
+      <div class="col-6 col-md-4">
         <a href="produto.html?produto=Suplex" class="text-decoration-none text-dark">
           <div class="card rounded-4 overflow-hidden">
             <img src="img/suplex.jpeg" class="card-img-top" alt="Tecido Suplex">
@@ -42,7 +42,7 @@
           </div>
         </a>
       </div>
-      <div class="col-md-4">
+      <div class="col-6 col-md-4">
         <a href="produto.html?produto=Maxxi" class="text-decoration-none text-dark">
           <div class="card rounded-4 overflow-hidden">
             <img src="img/maxxi.jpeg" class="card-img-top" alt="Tecido Maxxi">
