--- a/carrinho.html
+++ b/carrinho.html
@@ -15,7 +15,7 @@
     <a href="index.html">
       <img src="img/logo.png" alt="Logo Vaidosa Fitness" height="60">
     </a>
-    <a href="carrinho.html" class="btn btn-outline-light position-absolute end-0 top-50 translate-middle-y me-3">
+    <a href="carrinho.html" class="btn btn-outline-light position-absolute top-0 end-0 mt-2 me-2 shadow">
       🛒 <span id="contador-carrinho">(0)</span>
     </a>
   </header>
