--- a/produto.html
+++ b/produto.html
@@ -22,7 +22,7 @@
 
   <!-- Conteúdo do Produto -->
   <main class="container text-center my-5">
-    <img src="" id="produto-imagem" alt="Produto" class="img-fluid rounded-4 mb-3" style="max-width: 100%; height: auto;">
+    <img src="" id="produto-imagem" alt="Produto" class="img-fluid rounded-4 mb-3 produto-imagem">
     <h2 id="produto-nome" class="fw-bold fs-4"></h2>
     <p id="produto-desc" class="px-3"></p>
 
