--- a/index.html
+++ b/index.html
@@ -52,6 +52,226 @@
           </div>
         </a>
       </div>
+      <div class="col-6 col-md-4">
+        <a href="produto.html?produto=Maxxi" class="text-decoration-none text-dark">
+          <div class="card rounded-4 overflow-hidden">
+            <img src="img/maxxi.jpeg" class="card-img-top" alt="Tecido Maxxi">
+            <div class="card-body text-center">
+              <h5 class="card-title">Tecido Maxxi</h5>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-6 col-md-4">
+        <a href="produto.html?produto=Maxxi" class="text-decoration-none text-dark">
+          <div class="card rounded-4 overflow-hidden">
+            <img src="img/maxxi.jpeg" class="card-img-top" alt="Tecido Maxxi">
+            <div class="card-body text-center">
+              <h5 class="card-title">Tecido Maxxi</h5>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-6 col-md-4">
+        <a href="produto.html?produto=Maxxi" class="text-decoration-none text-dark">
+          <div class="card rounded-4 overflow-hidden">
+            <img src="img/maxxi.jpeg" class="card-img-top" alt="Tecido Maxxi">
+            <div class="card-body text-center">
+              <h5 class="card-title">Tecido Maxxi</h5>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-6 col-md-4">
+        <a href="produto.html?produto=Maxxi" class="text-decoration-none text-dark">
+          <div class="card rounded-4 overflow-hidden">
+            <img src="img/maxxi.jpeg" class="card-img-top" alt="Tecido Maxxi">
+            <div class="card-body text-center">
+              <h5 class="card-title">Tecido Maxxi</h5>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-6 col-md-4">
+        <a href="produto.html?produto=Maxxi" class="text-decoration-none text-dark">
+          <div class="card rounded-4 overflow-hidden">
+            <img src="img/maxxi.jpeg" class="card-img-top" alt="Tecido Maxxi">
+            <div class="card-body text-center">
+              <h5 class="card-title">Tecido Maxxi</h5>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-6 col-md-4">
+        <a href="produto.html?produto=Maxxi" class="text-decoration-none text-dark">
+          <div class="card rounded-4 overflow-hidden">
+            <img src="img/maxxi.jpeg" class="card-img-top" alt="Tecido Maxxi">
+            <div class="card-body text-center">
+              <h5 class="card-title">Tecido Maxxi</h5>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-6 col-md-4">
+        <a href="produto.html?produto=Maxxi" class="text-decoration-none text-dark">
+          <div class="card rounded-4 overflow-hidden">
+            <img src="img/maxxi.jpeg" class="card-img-top" alt="Tecido Maxxi">
+            <div class="card-body text-center">
+              <h5 class="card-title">Tecido Maxxi</h5>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-6 col-md-4">
+        <a href="produto.html?produto=Maxxi" class="text-decoration-none text-dark">
+          <div class="card rounded-4 overflow-hidden">
+            <img src="img/maxxi.jpeg" class="card-img-top" alt="Tecido Maxxi">
+            <div class="card-body text-center">
+              <h5 class="card-title">Tecido Maxxi</h5>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-6 col-md-4">
+        <a href="produto.html?produto=Maxxi" class="text-decoration-none text-dark">
+          <div class="card rounded-4 overflow-hidden">
+            <img src="img/maxxi.jpeg" class="card-img-top" alt="Tecido Maxxi">
+            <div class="card-body text-center">
+              <h5 class="card-title">Tecido Maxxi</h5>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-6 col-md-4">
+        <a href="produto.html?produto=Maxxi" class="text-decoration-none text-dark">
+          <div class="card rounded-4 overflow-hidden">
+            <img src="img/maxxi.jpeg" class="card-img-top" alt="Tecido Maxxi">
+            <div class="card-body text-center">
+              <h5 class="card-title">Tecido Maxxi</h5>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-6 col-md-4">
+        <a href="produto.html?produto=Maxxi" class="text-decoration-none text-dark">
+          <div class="card rounded-4 overflow-hidden">
+            <img src="img/maxxi.jpeg" class="card-img-top" alt="Tecido Maxxi">
+            <div class="card-body text-center">
+              <h5 class="card-title">Tecido Maxxi</h5>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-6 col-md-4">
+        <a href="produto.html?produto=Maxxi" class="text-decoration-none text-dark">
+          <div class="card rounded-4 overflow-hidden">
+            <img src="img/maxxi.jpeg" class="card-img-top" alt="Tecido Maxxi">
+            <div class="card-body text-center">
+              <h5 class="card-title">Tecido Maxxi</h5>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-6 col-md-4">
+        <a href="produto.html?produto=Maxxi" class="text-decoration-none text-dark">
+          <div class="card rounded-4 overflow-hidden">
+            <img src="img/maxxi.jpeg" class="card-img-top" alt="Tecido Maxxi">
+            <div class="card-body text-center">
+              <h5 class="card-title">Tecido Maxxi</h5>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-6 col-md-4">
+        <a href="produto.html?produto=Maxxi" class="text-decoration-none text-dark">
+          <div class="card rounded-4 overflow-hidden">
+            <img src="img/maxxi.jpeg" class="card-img-top" alt="Tecido Maxxi">
+            <div class="card-body text-center">
+              <h5 class="card-title">Tecido Maxxi</h5>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-6 col-md-4">
+        <a href="produto.html?produto=Maxxi" class="text-decoration-none text-dark">
+          <div class="card rounded-4 overflow-hidden">
+            <img src="img/maxxi.jpeg" class="card-img-top" alt="Tecido Maxxi">
+            <div class="card-body text-center">
+              <h5 class="card-title">Tecido Maxxi</h5>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-6 col-md-4">
+        <a href="produto.html?produto=Maxxi" class="text-decoration-none text-dark">
+          <div class="card rounded-4 overflow-hidden">
+            <img src="img/maxxi.jpeg" class="card-img-top" alt="Tecido Maxxi">
+            <div class="card-body text-center">
+              <h5 class="card-title">Tecido Maxxi</h5>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-6 col-md-4">
+        <a href="produto.html?produto=Maxxi" class="text-decoration-none text-dark">
+          <div class="card rounded-4 overflow-hidden">
+            <img src="img/maxxi.jpeg" class="card-img-top" alt="Tecido Maxxi">
+            <div class="card-body text-center">
+              <h5 class="card-title">Tecido Maxxi</h5>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-6 col-md-4">
+        <a href="produto.html?produto=Maxxi" class="text-decoration-none text-dark">
+          <div class="card rounded-4 overflow-hidden">
+            <img src="img/maxxi.jpeg" class="card-img-top" alt="Tecido Maxxi">
+            <div class="card-body text-center">
+              <h5 class="card-title">Tecido Maxxi</h5>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-6 col-md-4">
+        <a href="produto.html?produto=Maxxi" class="text-decoration-none text-dark">
+          <div class="card rounded-4 overflow-hidden">
+            <img src="img/maxxi.jpeg" class="card-img-top" alt="Tecido Maxxi">
+            <div class="card-body text-center">
+              <h5 class="card-title">Tecido Maxxi</h5>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-6 col-md-4">
+        <a href="produto.html?produto=Maxxi" class="text-decoration-none text-dark">
+          <div class="card rounded-4 overflow-hidden">
+            <img src="img/maxxi.jpeg" class="card-img-top" alt="Tecido Maxxi">
+            <div class="card-body text-center">
+              <h5 class="card-title">Tecido Maxxi</h5>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-6 col-md-4">
+        <a href="produto.html?produto=Maxxi" class="text-decoration-none text-dark">
+          <div class="card rounded-4 overflow-hidden">
+            <img src="img/maxxi.jpeg" class="card-img-top" alt="Tecido Maxxi">
+            <div class="card-body text-center">
+              <h5 class="card-title">Tecido Maxxi</h5>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-6 col-md-4">
+        <a href="produto.html?produto=Maxxi" class="text-decoration-none text-dark">
+          <div class="card rounded-4 overflow-hidden">
+            <img src="img/maxxi.jpeg" class="card-img-top" alt="Tecido Maxxi">
+            <div class="card-body text-center">
+              <h5 class="card-title">Tecido Maxxi</h5>
+            </div>
+          </div>
+        </a>
+      </div>
     </div>
   </main>
 
