--- a/index.html
+++ b/index.html
@@ -23,251 +23,241 @@
   <main class="container my-5">
     <div class="row g-4">
       <div class="col-6 col-md-4">
-        <a href="produto.html?produto=Jaguar" class="text-decoration-none text-dark">
+        <a href="produto.html?produto=Cirre01" class="text-decoration-none text-dark">
           <div class="card rounded-4 overflow-hidden">
-            <img src="img/jaguar.jpeg" class="card-img-top" alt="Tecido Jaguar">
+            <img src="img/tecido/cirre01.jpeg" class="card-img-top" alt="Tecido Cirrê">
             <div class="card-body text-center">
-              <h5 class="card-title">Tecido Jaguar</h5>
+              <h5 class="card-title">Tecido Cirrê - Vinho</h5>
             </div>
           </div>
         </a>
       </div>
       <div class="col-6 col-md-4">
-        <a href="produto.html?produto=Suplex" class="text-decoration-none text-dark">
+        <a href="produto.html?produto=Cirre02" class="text-decoration-none text-dark">
           <div class="card rounded-4 overflow-hidden">
-            <img src="img/suplex.jpeg" class="card-img-top" alt="Tecido Suplex">
+            <img src="img/tecido/cirre02.jpeg" class="card-img-top" alt="Tecido Cirrê">
             <div class="card-body text-center">
-              <h5 class="card-title">Tecido Suplex</h5>
+              <h5 class="card-title">Tecido Cirrê - Azul</h5>
             </div>
           </div>
         </a>
       </div>
       <div class="col-6 col-md-4">
-        <a href="produto.html?produto=Maxxi" class="text-decoration-none text-dark">
+        <a href="produto.html?produto=Cirre03" class="text-decoration-none text-dark">
           <div class="card rounded-4 overflow-hidden">
-            <img src="img/maxxi.jpeg" class="card-img-top" alt="Tecido Maxxi">
+            <img src="img/tecido/cirre03.jpeg" class="card-img-top" alt="Tecido Cirrê">
             <div class="card-body text-center">
-              <h5 class="card-title">Tecido Maxxi</h5>
+              <h5 class="card-title">Tecido Cirrê - Grafite</h5>
             </div>
           </div>
         </a>
       </div>
       <div class="col-6 col-md-4">
-        <a href="produto.html?produto=Maxxi" class="text-decoration-none text-dark">
+        <a href="produto.html?produto=Suplex01" class="text-decoration-none text-dark">
           <div class="card rounded-4 overflow-hidden">
-            <img src="img/maxxi.jpeg" class="card-img-top" alt="Tecido Maxxi">
+            <img src="img/tecido/suplex01.jpeg" class="card-img-top" alt="Tecido Suplex">
             <div class="card-body text-center">
-              <h5 class="card-title">Tecido Maxxi</h5>
+              <h5 class="card-title">Suplex - Cinza Mescla</h5>
             </div>
           </div>
         </a>
       </div>
       <div class="col-6 col-md-4">
-        <a href="produto.html?produto=Maxxi" class="text-decoration-none text-dark">
+        <a href="produto.html?produto=Suplex02" class="text-decoration-none text-dark">
           <div class="card rounded-4 overflow-hidden">
-            <img src="img/maxxi.jpeg" class="card-img-top" alt="Tecido Maxxi">
+            <img src="img/tecido/suplex02.jpeg" class="card-img-top" alt="Tecido Suplex">
             <div class="card-body text-center">
-              <h5 class="card-title">Tecido Maxxi</h5>
+              <h5 class="card-title">Suplex - Rosa Cliclete</h5>
             </div>
           </div>
         </a>
       </div>
       <div class="col-6 col-md-4">
-        <a href="produto.html?produto=Maxxi" class="text-decoration-none text-dark">
+        <a href="produto.html?produto=Suplex03" class="text-decoration-none text-dark">
           <div class="card rounded-4 overflow-hidden">
-            <img src="img/maxxi.jpeg" class="card-img-top" alt="Tecido Maxxi">
+            <img src="img/tecido/suplex03.jpeg" class="card-img-top" alt="Tecido Suplex">
             <div class="card-body text-center">
-              <h5 class="card-title">Tecido Maxxi</h5>
+              <h5 class="card-title">Suplex - Verde Água</h5>
             </div>
           </div>
         </a>
       </div>
       <div class="col-6 col-md-4">
-        <a href="produto.html?produto=Maxxi" class="text-decoration-none text-dark">
+        <a href="produto.html?produto=Suplex04" class="text-decoration-none text-dark">
           <div class="card rounded-4 overflow-hidden">
-            <img src="img/maxxi.jpeg" class="card-img-top" alt="Tecido Maxxi">
+            <img src="img/tecido/suplex04.jpeg" class="card-img-top" alt="Tecido Suplex">
             <div class="card-body text-center">
-              <h5 class="card-title">Tecido Maxxi</h5>
+              <h5 class="card-title">Suplex - Preto</h5>
             </div>
           </div>
         </a>
       </div>
       <div class="col-6 col-md-4">
-        <a href="produto.html?produto=Maxxi" class="text-decoration-none text-dark">
+        <a href="produto.html?produto=Suplex05" class="text-decoration-none text-dark">
           <div class="card rounded-4 overflow-hidden">
-            <img src="img/maxxi.jpeg" class="card-img-top" alt="Tecido Maxxi">
+            <img src="img/tecido/suplex05.jpeg" class="card-img-top" alt="Tecido Suplex">
             <div class="card-body text-center">
-              <h5 class="card-title">Tecido Maxxi</h5>
+              <h5 class="card-title">Suplex - Cinza</h5>
             </div>
           </div>
         </a>
       </div>
       <div class="col-6 col-md-4">
-        <a href="produto.html?produto=Maxxi" class="text-decoration-none text-dark">
+        <a href="produto.html?produto=Suplex06" class="text-decoration-none text-dark">
           <div class="card rounded-4 overflow-hidden">
-            <img src="img/maxxi.jpeg" class="card-img-top" alt="Tecido Maxxi">
+            <img src="img/tecido/suplex06.jpeg" class="card-img-top" alt="Tecido Suplex">
             <div class="card-body text-center">
-              <h5 class="card-title">Tecido Maxxi</h5>
+              <h5 class="card-title">Suplex - Azul Marinho/h5>
             </div>
           </div>
         </a>
       </div>
       <div class="col-6 col-md-4">
-        <a href="produto.html?produto=Maxxi" class="text-decoration-none text-dark">
+        <a href="produto.html?produto=Jacquard01" class="text-decoration-none text-dark">
           <div class="card rounded-4 overflow-hidden">
-            <img src="img/maxxi.jpeg" class="card-img-top" alt="Tecido Maxxi">
+            <img src="img/tecido/jacquard01.jpeg" class="card-img-top" alt="Tecido Jacquard">
             <div class="card-body text-center">
-              <h5 class="card-title">Tecido Maxxi</h5>
+              <h5 class="card-title">Jacquard - Vinho</h5>
             </div>
           </div>
         </a>
       </div>
       <div class="col-6 col-md-4">
-        <a href="produto.html?produto=Maxxi" class="text-decoration-none text-dark">
+        <a href="produto.html?produto=Jacquard02" class="text-decoration-none text-dark">
           <div class="card rounded-4 overflow-hidden">
-            <img src="img/maxxi.jpeg" class="card-img-top" alt="Tecido Maxxi">
+            <img src="img/tecido/jacquard02.jpeg" class="card-img-top" alt="Tecido Jacquard">
             <div class="card-body text-center">
-              <h5 class="card-title">Tecido Maxxi</h5>
+              <h5 class="card-title">Jacquard - Verde Escuro</h5>
             </div>
           </div>
         </a>
       </div>
       <div class="col-6 col-md-4">
-        <a href="produto.html?produto=Maxxi" class="text-decoration-none text-dark">
+        <a href="produto.html?produto=Jacquard03" class="text-decoration-none text-dark">
           <div class="card rounded-4 overflow-hidden">
-            <img src="img/maxxi.jpeg" class="card-img-top" alt="Tecido Maxxi">
+            <img src="img/tecido/jacquard03.jpeg" class="card-img-top" alt="Tecido Jacquard">
             <div class="card-body text-center">
-              <h5 class="card-title">Tecido Maxxi</h5>
+              <h5 class="card-title">Jacquard - Rosa</h5>
             </div>
           </div>
         </a>
       </div>
       <div class="col-6 col-md-4">
-        <a href="produto.html?produto=Maxxi" class="text-decoration-none text-dark">
+        <a href="produto.html?produto=Jacquard04" class="text-decoration-none text-dark">
           <div class="card rounded-4 overflow-hidden">
-            <img src="img/maxxi.jpeg" class="card-img-top" alt="Tecido Maxxi">
+            <img src="img/tecido/jacquard04.jpeg" class="card-img-top" alt="Tecido Jacquard">
             <div class="card-body text-center">
-              <h5 class="card-title">Tecido Maxxi</h5>
+              <h5 class="card-title">Jacquard - Goiaba</h5>
             </div>
           </div>
         </a>
       </div>
       <div class="col-6 col-md-4">
-        <a href="produto.html?produto=Maxxi" class="text-decoration-none text-dark">
+        <a href="produto.html?produto=Glamour" class="text-decoration-none text-dark">
           <div class="card rounded-4 overflow-hidden">
-            <img src="img/maxxi.jpeg" class="card-img-top" alt="Tecido Maxxi">
+            <img src="img/tecido/glamour.jpeg" class="card-img-top" alt="Tecido Glamour">
             <div class="card-body text-center">
-              <h5 class="card-title">Tecido Maxxi</h5>
+              <h5 class="card-title">Glamour - Bordô</h5>
             </div>
           </div>
         </a>
       </div>
       <div class="col-6 col-md-4">
-        <a href="produto.html?produto=Maxxi" class="text-decoration-none text-dark">
+        <a href="produto.html?produto=Estampado01" class="text-decoration-none text-dark">
           <div class="card rounded-4 overflow-hidden">
-            <img src="img/maxxi.jpeg" class="card-img-top" alt="Tecido Maxxi">
+            <img src="img/tecido/estampado01.jpeg" class="card-img-top" alt="Tecido Estampado">
             <div class="card-body text-center">
-              <h5 class="card-title">Tecido Maxxi</h5>
+              <h5 class="card-title">Estampado Florido Roxo</h5>
             </div>
           </div>
         </a>
       </div>
       <div class="col-6 col-md-4">
-        <a href="produto.html?produto=Maxxi" class="text-decoration-none text-dark">
+        <a href="produto.html?produto=Estampado02" class="text-decoration-none text-dark">
           <div class="card rounded-4 overflow-hidden">
-            <img src="img/maxxi.jpeg" class="card-img-top" alt="Tecido Maxxi">
+            <img src="img/tecido/estampado02.jpeg" class="card-img-top" alt="Tecido Estampado">
             <div class="card-body text-center">
-              <h5 class="card-title">Tecido Maxxi</h5>
+              <h5 class="card-title">Estampado Colorido</h5>
             </div>
           </div>
         </a>
       </div>
       <div class="col-6 col-md-4">
-        <a href="produto.html?produto=Maxxi" class="text-decoration-none text-dark">
+        <a href="produto.html?produto=Estampado03" class="text-decoration-none text-dark">
           <div class="card rounded-4 overflow-hidden">
-            <img src="img/maxxi.jpeg" class="card-img-top" alt="Tecido Maxxi">
+            <img src="img/tecido/estampado03.jpeg" class="card-img-top" alt="Tecido Estampado">
             <div class="card-body text-center">
-              <h5 class="card-title">Tecido Maxxi</h5>
+              <h5 class="card-title">Estampado Bolinha</h5>
             </div>
           </div>
         </a>
       </div>
       <div class="col-6 col-md-4">
-        <a href="produto.html?produto=Maxxi" class="text-decoration-none text-dark">
+        <a href="produto.html?produto=Estampado04" class="text-decoration-none text-dark">
           <div class="card rounded-4 overflow-hidden">
-            <img src="img/maxxi.jpeg" class="card-img-top" alt="Tecido Maxxi">
+            <img src="img/tecido/estampado04.jpeg" class="card-img-top" alt="Tecido Estampado">
             <div class="card-body text-center">
-              <h5 class="card-title">Tecido Maxxi</h5>
+              <h5 class="card-title">Estampado Verde Água</h5>
             </div>
           </div>
         </a>
       </div>
       <div class="col-6 col-md-4">
-        <a href="produto.html?produto=Maxxi" class="text-decoration-none text-dark">
+        <a href="produto.html?produto=Estampado05" class="text-decoration-none text-dark">
           <div class="card rounded-4 overflow-hidden">
-            <img src="img/maxxi.jpeg" class="card-img-top" alt="Tecido Maxxi">
+            <img src="img/tecido/estampado05.jpeg" class="card-img-top" alt="Tecido Estampado">
             <div class="card-body text-center">
-              <h5 class="card-title">Tecido Maxxi</h5>
+              <h5 class="card-title">Estampado Étnica tropical</h5>
             </div>
           </div>
         </a>
       </div>
       <div class="col-6 col-md-4">
-        <a href="produto.html?produto=Maxxi" class="text-decoration-none text-dark">
+        <a href="produto.html?produto=Estampado06" class="text-decoration-none text-dark">
           <div class="card rounded-4 overflow-hidden">
-            <img src="img/maxxi.jpeg" class="card-img-top" alt="Tecido Maxxi">
+            <img src="img/tecido/estampado06.jpeg" class="card-img-top" alt="Tecido Estampado">
             <div class="card-body text-center">
-              <h5 class="card-title">Tecido Maxxi</h5>
+              <h5 class="card-title">Estampado Abstrato Neon</h5>
             </div>
           </div>
         </a>
       </div>
       <div class="col-6 col-md-4">
-        <a href="produto.html?produto=Maxxi" class="text-decoration-none text-dark">
+        <a href="produto.html?produto=Estampado07" class="text-decoration-none text-dark">
           <div class="card rounded-4 overflow-hidden">
-            <img src="img/maxxi.jpeg" class="card-img-top" alt="Tecido Maxxi">
+            <img src="img/tecido/estampado07.jpeg" class="card-img-top" alt="Tecido Estampado">
             <div class="card-body text-center">
-              <h5 class="card-title">Tecido Maxxi</h5>
+              <h5 class="card-title">Estampado Espiral Cósmica</h5>
             </div>
           </div>
         </a>
       </div>
       <div class="col-6 col-md-4">
-        <a href="produto.html?produto=Maxxi" class="text-decoration-none text-dark">
+        <a href="produto.html?produto=Estampado08" class="text-decoration-none text-dark">
           <div class="card rounded-4 overflow-hidden">
-            <img src="img/maxxi.jpeg" class="card-img-top" alt="Tecido Maxxi">
+            <img src="img/tecido/estampado08.jpeg" class="card-img-top" alt="Tecido Estampado">
             <div class="card-body text-center">
-              <h5 class="card-title">Tecido Maxxi</h5>
+              <h5 class="card-title">Estampado Selva Neon</h5>
             </div>
           </div>
         </a>
       </div>
       <div class="col-6 col-md-4">
-        <a href="produto.html?produto=Maxxi" class="text-decoration-none text-dark">
+        <a href="produto.html?produto=Estampado09" class="text-decoration-none text-dark">
           <div class="card rounded-4 overflow-hidden">
-            <img src="img/maxxi.jpeg" class="card-img-top" alt="Tecido Maxxi">
+            <img src="img/tecido/estampado09.jpeg" class="card-img-top" alt="Tecido Estampado">
             <div class="card-body text-center">
-              <h5 class="card-title">Tecido Maxxi</h5>
+              <h5 class="card-title">Estampado Etnopop</h5>
             </div>
           </div>
         </a>
       </div>
       <div class="col-6 col-md-4">
-        <a href="produto.html?produto=Maxxi" class="text-decoration-none text-dark">
+        <a href="produto.html?produto=Estampado10" class="text-decoration-none text-dark">
           <div class="card rounded-4 overflow-hidden">
-            <img src="img/maxxi.jpeg" class="card-img-top" alt="Tecido Maxxi">
+            <img src="img/tecido/estampado10.jpeg" class="card-img-top" alt="Tecido Estampado">
             <div class="card-body text-center">
-              <h5 class="card-title">Tecido Maxxi</h5>
-            </div>
-          </div>
-        </a>
-      </div>
-      <div class="col-6 col-md-4">
-        <a href="produto.html?produto=Maxxi" class="text-decoration-none text-dark">
-          <div class="card rounded-4 overflow-hidden">
-            <img src="img/maxxi.jpeg" class="card-img-top" alt="Tecido Maxxi">
-            <div class="card-body text-center">
-              <h5 class="card-title">Tecido Maxxi</h5>
+              <h5 class="card-title">Estampado Impacto Neon</h5>
             </div>
           </div>
         </a>
