--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="col-6 col-md-4">
         <a href="produto.html?produto=Cirre01" class="text-decoration-none text-dark">
           <div class="card rounded-4 overflow-hidden">
-            <img src="img/tecido/cirre01.jpeg" data-hover="img/modelos/LeggingVinho.png" class="card-img-top" alt="Tecido Cirrê">
+            <img src="img/tecido/cirre01.jpeg" class="card-img-top" alt="Tecido Cirrê">
             <div class="card-body text-center">
               <h5 class="card-title">Tecido Cirrê - Vinho</h5>
             </div>
