--- a/produto.html
+++ b/produto.html
@@ -25,7 +25,7 @@
 
   <!-- Imagens lado a lado -->
   <div class="d-flex flex-column flex-md-row justify-content-center align-items-center gap-4">
-    <img src="" id="produto-imagem" alt="Produto" class="rounded-4 mb-3">
+    <img src="" id="produto-imagem" alt="Produto" class="produto-imagem">
   </div>
 
   <!-- Nome e descrição -->
