--- a/carrinho.html
+++ b/carrinho.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,12 +8,10 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="css/style.css" />
 </head>
-
 <body>
   <!-- Cabeçalho -->
   <header class="py-3 position-relative text-center" style="background-color: #8d906c;">
-    <a href="javascript:history.back()"
-      class="position-absolute start-0 top-50 translate-middle-y ms-3 text-dark fs-4 text-decoration-none">←</a>
+    <a href="javascript:history.back()" class="position-absolute start-0 top-50 translate-middle-y ms-3 text-dark fs-4 text-decoration-none">←</a>
     <a href="index.html">
       <img src="img/logo.png" alt="Logo Vaidosa Fitness" height="60">
     </a>
@@ -31,12 +28,10 @@
     <hr class="my-5" />
 
     <h4 class="text-center mb-4">Solicitar orçamento</h4>
-    <form id="form-orcamento" action="https://formsubmit.co/0ba22b63d8cf4a36a5b06942f5b749c1" method="POST">
+    <form id="form-orcamento" action="https://formspree.io/f/meozkddn" method="POST">
       <input type="hidden" name="_subject" value="Solicitação de orçamento com carrinho">
       <input type="hidden" name="produtos" id="input-produtos">
-
-      <!-- Redirecionamento após envio -->
-      <input type="hidden" name="_next" value="https://carlosbalbinot.github.io/">
+      <input type="hidden" name="_next" value="https://carlosbalbinot.github.io/projeto-catalogo/">
 
       <div class="row mb-3">
         <div class="col-md-6">
@@ -56,7 +51,7 @@
         </div>
         <div class="col-md-6">
           <label class="form-label">Tipo de pessoa</label>
-          <select class="form-select" id="tipoPessoa" required>
+          <select class="form-select" name="tipoPessoa" id="tipoPessoa" required>
             <option value="">Selecione</option>
             <option value="cpf">CPF</option>
             <option value="cnpj">CNPJ</option>
@@ -76,8 +71,7 @@
 
       <div class="mb-3">
         <label class="form-label">Mensagem ou observações</label>
-        <textarea name="descricao" class="form-control" rows="3"
-          placeholder="Ex: Quantidades, tamanhos, cores..."></textarea>
+        <textarea name="descricao" class="form-control" rows="3" placeholder="Ex: Quantidades, tamanhos, cores..."></textarea>
       </div>
 
       <div class="text-center">
@@ -95,5 +89,4 @@
   <script src="js/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
